show message content also run over websocket

--- a/app/views/messagesystem/messagecontainer.scala.html
+++ b/app/views/messagesystem/messagecontainer.scala.html
@@ -22,7 +22,7 @@
           <img class="media-object" src="http://www.gravatar.com/avatar/{{otheruser.userHash}}" height="50" width="50">
         </a>
         <div class="media-body">
-          <h5 class="media-heading"><a href="#" ng-click="chatcontent(talk.id)">{{otheruser.firstname}} {{otheruser.lastname}}</a></h5>
+          <h5 class="media-heading"><a href="#" ng-click="socketchatcontent(talk.id)">{{otheruser.firstname}} {{otheruser.lastname}}</a></h5>
           <small><div class="label label-info">{{talk.semester}}</div></small>
         </div>
 
