not profile it is ssh

--- a/app/views/account/settings/index.scala.html
+++ b/app/views/account/settings/index.scala.html
@@ -6,12 +6,12 @@
         @content
         </div>
         <ul class="nav nav-tabs">
-            <li class="active"><a href="#profile" data-toggle="tab">Update SSH</a></li>
+            <li class="active"><a href="#ssh" data-toggle="tab">Update SSH</a></li>
             <li><a href="#email" data-toggle="tab">Update Email</a></li>
             <li><a href="#password" data-toggle="tab">Update Password</a></li>
         </ul>
         <div id="myTabContent" class="tab-content">
-            <div class="tab-pane active in" id="profile">
+            <div class="tab-pane active in" id="ssh">
              <h4 class="page-header">@Messages("need.ssh")<small>
              @Messages("need.ssh2")
              </small></h4>
