--- a/app/views/lectures/user/lecturehome.scala.html
+++ b/app/views/lectures/user/lecturehome.scala.html
@@ -164,23 +164,7 @@
                   </div>
                 }
               </table>
-              <hr>
-              <table class="table table-striped custab">
-                <thead>
-                  <tr>
-                    <th>@Messages("assginment.validhandin.sum")</th>
-                    <th>@Messages("assginment.optional.sum")</th>
-                    <th>@Messages("totalperformance")</th>
-                  </tr>
-                </thead>
-                <tr>
-                  <td>@Handin.getValidHandinofstudentinlecture(lecture,semesteruser,lecture.semester).size()/@lecture.requriednumberofvalidassignment</td>
-                  <td>@Handin.getOptionalAssignmentofStudentsinLecture(lecture.semester,lecture,semesteruser).size()/@lecture.optionalassignments</td>
-                  <td>
-                  @if(Evaluation.findByLectureAndUser(lecture.semester,lecture,semesteruser)!=null){
-                  @Evaluation.findByLectureAndUser(lecture.semester,lecture,semesteruser).performance}else{0.0}</td>
-                </tr>
-              </table>
+
             <a class="btn btn-danger pull-right" href="@controllers.lectures.user.routes.Lecturehome.deleteSemesteruserfromlecture(semesteruser.lastname,lecture.semester,lecture.courseName)">@Messages("lecture.leave")</a>
 
             } else{
@@ -287,6 +271,28 @@
           </div>
 
         }
+        <div class="panel panel-default">
+          <div class="panel-heading">@Messages("lecture.home.performance")</div>
+          <div class="panel-body">
+            <hr>
+            <table class="table table-striped custab">
+              <thead>
+                <tr>
+                  <th>@Messages("assginment.validhandin.sum")</th>
+                  <th>@Messages("assginment.optional.sum")</th>
+                  <th>@Messages("totalperformance")</th>
+                </tr>
+              </thead>
+              <tr>
+                <td>@Handin.getValidHandinofstudentinlecture(lecture,semesteruser,lecture.semester).size()/@lecture.requriednumberofvalidassignment</td>
+                <td>@Handin.getOptionalAssignmentofStudentsinLecture(lecture.semester,lecture,semesteruser).size()/@lecture.optionalassignments</td>
+                <td>
+                @if(Evaluation.findByLectureAndUser(lecture.semester,lecture,semesteruser)!=null){
+                  @Evaluation.findByLectureAndUser(lecture.semester,lecture,semesteruser).performance}else{0.0}</td>
+              </tr>
+            </table>
+          </div>
+          </div>
       </div>
       <div ng-app="forumapp" ng-controller="forumcontroller" class="tab-pane" id="forum">
       @if(lecture.attendent.contains(semesteruser)){
