--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -63,6 +63,8 @@
             <script src="@routes.Assets.at("javascripts/message/scrollglue.js")" type="text/javascript"></script>
             <script src="@routes.Assets.at("javascripts/message/ng-websocket.js")" type="text/javascript"></script>
             <script src="@routes.Assets.at("javascripts/message/messagecontrol.js")" type="text/javascript"></script>
+            <script src="@routes.Assets.at("javascripts/gitgraph/gitgraph.min.js")" type="text/javascript"></script>
+            <script src="@routes.Assets.at("javascripts/gitgraph/generate.js")" type="text/javascript"></script>
         </div>
 
 
