--- a/app/views/lectures/admin/lecturehome.scala.html
+++ b/app/views/lectures/admin/lecturehome.scala.html
@@ -452,6 +452,7 @@
                         </tr>
                         <tr>
                           <td colspan="5">
+                            <div class="label label-success col-md-12">@Messages("repo.status")</div>
                             <canvas id="@stu.userHash"></canvas>
                             <script type="text/javascript">
                    showcanvas('@stu.email','@lecture.semester','@lecture.courseName','@stu.userHash');
