--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -10,6 +10,8 @@
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/font-awesome.min.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap-datetimepicker.min.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/messagestyle.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/angular-csp.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/angular-ui-notification.min.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <script src="@routes.Assets.at("javascripts/jquery/jquery-2.1.0.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/bootstrap.js")" type="text/javascript"></script>
@@ -65,6 +67,7 @@
             <script src="@routes.Assets.at("javascripts/message/scrollglue.js")" type="text/javascript"></script>
             <script src="@routes.Assets.at("javascripts/message/ng-websocket.js")" type="text/javascript"></script>
             <script src="@routes.Assets.at("javascripts/message/messagecontrol.js")" type="text/javascript"></script>
+            <script src="@routes.Assets.at("javascripts/message/angular-ui-notification.min.js")" type="text/javascript"></script>
 
         </div>
 
