--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -21,6 +21,7 @@
         <script src="@routes.Assets.at("javascripts/datepicker/bootstrap-datetimepicker.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/gitgraph/gitgraph.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/gitgraph/generategraph.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/message/msgnotification.js")" type="text/javascript"></script>
     </head>
     <body>
         <nav class="navbar navbar-default navbar-fixed-top">
