add marker name to students handin, and new java script to remember scroll position

--- a/app/views/lectures/user/lecturehome.scala.html
+++ b/app/views/lectures/user/lecturehome.scala.html
@@ -152,7 +152,7 @@
                         </div>
                         <div class="modal-body">
                         @if(Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,semesteruser,currentassignment)!=null){
-                            @for(exercise<-Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,semesteruser,currentassignment).exercises){
+                            @for(exercise<- Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,semesteruser,currentassignment).exercises){
                               <div class="row">
                                 <div class="lable label-info text-center">@exercise.title</div>
                                 <div class="col-xs-2"><label>@Messages("gain")</label>@exercise.earndpoints</div>
@@ -160,7 +160,7 @@
                                 <blockquote class="col-xs-12"><p>@exercise.comments</p><footer>@Messages("comment")</footer></blockquote>
                               </div>
                             }
-
+                           <p class="textfont">@Messages("lecture.handin.marker")@Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,semesteruser,currentassignment).marker.lastname,@Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,semesteruser,currentassignment).marker.firstname</p>
                         }else{<span class="alert alert-warning">@Messages("nohandin")</span>}
                         </div>
                       </div>
@@ -263,7 +263,7 @@
                                 <blockquote class="col-xs-12"><p>@exercise.comments</p><footer>@Messages("comment")</footer></blockquote>
                               </div>
                             }
-
+                            <p class="textfont">@Messages("lecture.handin.marker")@Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,semesteruser,currentassignment).marker.lastname,@Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,semesteruser,currentassignment).marker.firstname</p>
                           }else{<span class="alert alert-warning">@Messages("nohandin")</span>}
                           </div>
                         </div>
