--- a/app/views/account/signup/createFormOnly.scala.html
+++ b/app/views/account/signup/createFormOnly.scala.html
@@ -4,38 +4,38 @@
     <div class="form-group">
         <label for="matrikel" class="col-sm-2 control-label">@Messages("signup.label.matrikel")</label>
         <div class="col-sm-10">
-            <input type="number" class="form-control" name="id" placeholder="@Messages("signup.holder.student")">
+            <input type="number" class="form-control" id="SignUpId" name="id" placeholder="@Messages("signup.holder.student")">
         </div>
     </div>
     <div class="form-group">
         <label for="email" class="col-sm-2 control-label">@Messages("signup.label.email")</label>
         <div class="col-sm-10">
-            <input type="email" class="form-control" name="email" placeholder="@Messages("signup.holder.requried")">
+            <input type="email" class="form-control" id="SignUpEmail" name="email" placeholder="@Messages("signup.holder.requried")">
         </div>
     </div>
     <div class="form-group">
         <label for="lastname" class="col-sm-2 control-label">@Messages("signup.label.lastname")</label>
         <div class="col-sm-10">
-            <input type="text" class="form-control" name="lastname" placeholder="@Messages("signup.holder.requried")">
+            <input type="text" class="form-control" id="SignUpLastname" name="lastname" placeholder="@Messages("signup.holder.requried")">
         </div>
     </div>
     <div class="form-group">
         <label for="firstname" class="col-sm-2 control-label">@Messages("signup.label.firstname")</label>
         <div class="col-sm-10">
-            <input type="text" class="form-control" name="firstname" placeholder="@Messages("signup.holder.requried")">
+            <input type="text" class="form-control" id="SignUpFirstname" name="firstname" placeholder="@Messages("signup.holder.requried")">
         </div>
     </div>
 
     <div class="form-group">
         <label for="password" class="col-sm-2 control-label">@Messages("signup.label.password")</label>
         <div class="col-sm-10">
-            <input type="password" class="form-control" name="inputPassword" placeholder="@Messages("signup.holder.requried")">
+            <input type="password" class="form-control" id="SignUpPassword" name="inputPassword" placeholder="@Messages("signup.holder.requried")">
         </div>
     </div>
 
     <div class="form-group">
         <div class="col-sm-12">
-            <button type="submit" class="btn btn-primary pull-right">@Messages("signup.signup")</button>
+            <button type="submit" id="SignUpSubmit" class="btn btn-primary pull-right">@Messages("signup.signup")</button>
         </div>
     </div>
 </form>
