--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -1,10 +1,10 @@
 <div class="navbar-form navbar-right">
 <form class="form-inline" action="@routes.Application.authenticate()" method="post">
     <div class="form-group">
-        <input type="email" class="form-control" id="exampleInputEmail3" name="email" placeholder="@Messages("email")">
+        <input type="email" class="form-control" id="LoginEmail" name="email" placeholder="@Messages("email")">
     </div>
     <div class="form-group">
-        <input type="password" class="form-control" id="exampleInputPassword3" name="password" placeholder="@Messages("password")">
+        <input type="password" class="form-control" id="LoginPassword" name="password" placeholder="@Messages("password")">
     </div>
     <button type="submit" class="btn btn-success">@Messages("signin.signin")</button>
     <small><a href="@controllers.account.routes.Reset.ask">@Messages("forgot.password")</a></small>
