modify several data models for testing purpose confirmation and registration finish test

--- a/app/views/account/signup/confirm.scala.html
+++ b/app/views/account/signup/confirm.scala.html
@@ -13,7 +13,7 @@
                         <p>@Messages("account.successfully.validated")</p>
                     </div>
                     <div class="modal-footer" action="@Application.directlogin(user)">
-                        <a type="button" class="btn btn-primary" href="@routes.Application.index()" data-dismiss="modal">@Messages("direct.login")</a>
+                        <a type="button" id="DirectLogin" class="btn btn-primary" href="@routes.Application.index()" data-dismiss="modal">@Messages("direct.login")</a>
                     </div>
                 </div><!-- /.modal-content -->
             </div><!-- /.modal-dialog -->
