--- a/app/views/dashboard/index.scala.html
+++ b/app/views/dashboard/index.scala.html
@@ -10,7 +10,7 @@
             <ul>
                 <li>Matrikel Number: @user.id</li>
                 <li>Lastname: @user.lastname</li>
-                <li>User Group: @user.roles.toString()</li>
+                <li id="UserGroup">User Group: @user.roles.toString()</li>
                 <li>User created on: @user.dateCreation</li>
                 <li>User last login: @user.dateLastlogin</li>
             </ul>
