--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -6,7 +6,7 @@
     <div class="form-group">
         <input type="password" class="form-control" id="LoginPassword" name="password" placeholder="@Messages("password")">
     </div>
-    <button type="submit" class="btn btn-success">@Messages("signin.signin")</button>
+    <button type="submit" id="LoginButton" class="btn btn-success">@Messages("signin.signin")</button>
     <small><a href="@controllers.account.routes.Reset.ask">@Messages("forgot.password")</a></small>
 </form>
     </div>
