--- a/app/views/account/reset/reset.scala.html
+++ b/app/views/account/reset/reset.scala.html
@@ -6,7 +6,7 @@
             <div class="col-md-6 col-md-offset-3">
                 @wflash()
                 <h3>@Messages("signup.reset.password")</h3>
-                <form class="form-horizontal" ng-app="password" ng-controller="passwordformcheck" action="@controllers.account.routes.Reset.runReset(token)" method="post">
+                <form class="form-horizontal" ng-app="password" ng-controller="passwordformcheck" action="@controllers.account.routes.Reset.runReset(token)#password" method="post">
                     <div class="form-group">
                         <div class="col-sm-6">
                             <input type="password" class="form-control" id="password1" name = "inputPassword" ng-model="password1" placeholder="@Messages("resetpassword.new.password")">
@@ -25,8 +25,8 @@
                     </div>
                     <div class="form-group">
                         <div class="col-sm-10">
-                            <input type="submit" class="btn btn-primary" ng-disabled="!isValid(password1,password2)" value="@Messages("validate")">
-                            <a href="@routes.Application.index" class="btn btn-default">@Messages("goback")</a>
+                            <input type="submit" id="passwordSubmit" class="btn btn-primary" ng-disabled="!isValid(password1,password2)" value="@Messages("validate")">
+                            <a href="@controllers.account.settings.routes.Index.index()#password" class="btn btn-default">@Messages("goback")</a>
                         </div>
                     </div>
                 </form>
