--- a/app/views/account/settings/index.scala.html
+++ b/app/views/account/settings/index.scala.html
@@ -7,8 +7,8 @@
         </div>
         <ul class="nav nav-tabs">
             <li class="active"><a href="#ssh" data-toggle="tab">Update SSH</a></li>
-            <li><a href="#email" data-toggle="tab">Update Email</a></li>
-            <li><a href="#password" data-toggle="tab">Update Password</a></li>
+            <li><a href="#email" data-toggle="tab" id="UpdateEmail">Update Email</a></li>
+            <li><a href="#password" data-toggle="tab" id="UpdatePassword">Update Password</a></li>
         </ul>
         <div id="myTabContent" class="tab-content">
             <div class="tab-pane active in" id="ssh">
@@ -50,22 +50,22 @@
                 @*</button>*@
             </div>
             <div class="tab-pane fade" id = "email">
-                <form action="@controllers.account.settings.routes.Email.runEmail()" method="post">
+                <form action="@controllers.account.settings.routes.Email.runEmail()#email" method="post">
                     <div class="form-group">
                         <label>@Messages("email.current")</label>
                         <input type="email" class="form-control" placeholder="@user.email" disabled="disabled">
                     </div>
                     <div class="form-group">
                         <label for="exampleInputPassword1">@Messages("email.new")</label>
-                        <input type="email" class="form-control" name="email" placeholder="@Messages("email.type")">
+                        <input type="email" class="form-control" name="email" id="inputUpdateEmail" placeholder="@Messages("email.type")">
                     </div>
-                    <button type="submit" class="btn btn-default">Reset</button>
+                    <button type="submit" id="UpdateEmailButton" class="btn btn-default">Reset</button>
                 </form>
             </div>
             <div class="tab-pane fade" id = "password">
                 <br>
-                <form action="@controllers.account.settings.routes.Password.runPassword()" method="post">
-                    <button type="submit" class="btn btn-default">Reset</button>
+                <form action="@controllers.account.settings.routes.Password.runPassword()#password" method="post">
+                    <button type="submit" id="UpdatePasswordButton" class="btn btn-default">Reset</button>
                 </form>
             </div>
         </div>
